--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taskapp",
+  "name": "storybook",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,15 +12,17 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.7",
     "@storybook/addon-interactions": "^7.0.7",
     "@storybook/addon-links": "^7.0.7",
+    "@storybook/addon-styling": "^1.0.5",
     "@storybook/blocks": "^7.0.7",
     "@storybook/react": "^7.0.7",
     "@storybook/react-vite": "^7.0.7",
@@ -34,14 +36,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.11",
-    "msw": "^1.2.1",
-    "msw-storybook-addon": "^1.8.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.7",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
